2012-10-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/gcc-torture-execute-20020213-1.c,
	  support/regression/tests/gcc-torture-execute-20020615-1.c,
	  support/regression/tests/gcc-torture-execute-20020508-1.c,
	  support/regression/tests/gcc-torture-execute-20020911-1.c,
	  support/regression/tests/gcc-torture-execute-20020321-1.c,
	  support/regression/tests/gcc-torture-execute-20020402-1.c,
	  support/regression/tests/gcc-torture-execute-20021015-1.c,
	  support/regression/tests/gcc-torture-execute-20020920-1.c,
	  support/regression/tests/gcc-torture-execute-20020508-2.c,
	  support/regression/tests/gcc-torture-execute-20020402-2.c,
	  support/regression/tests/gcc-torture-execute-20020508-3.c,
	  support/regression/tests/gcc-torture-execute-20020510-1.c,
	  support/regression/tests/gcc-torture-execute-20021204-1.c,
	  support/regression/tests/gcc-torture-execute-20020206-1.c,
	  support/regression/tests/gcc-torture-execute-20020402-3.c,
	  support/regression/tests/gcc-torture-execute-20020805-1.c,
	  support/regression/tests/gcc-torture-execute-20020215-1.c,
	  support/regression/tests/gcc-torture-execute-20020904-1.c,
	  support/regression/tests/gcc-torture-execute-20020716-1.c,
	  support/regression/tests/gcc-torture-execute-20020413-1.c,
	  support/regression/tests/gcc-torture-execute-20020216-1.c,
	  support/regression/tests/gcc-torture-execute-20020503-1.c,
	  support/regression/tests/gcc-torture-execute-20020225-1.c,
	  support/regression/tests/gcc-torture-execute-20020118-1.c,
	  support/regression/tests/gcc-torture-execute-20021010-1.c,
	  support/regression/tests/gcc-torture-execute-20020127-1.c,
	  support/regression/tests/gcc-torture-execute-20020225-2.c,
	  support/regression/tests/gcc-torture-execute-20020529-1.c,
	  support/regression/tests/gcc-torture-execute-20020611-1.c,
	  support/regression/tests/gcc-torture-execute-20020619-1.c,
	  support/regression/tests/gcc-torture-execute-20021010-2.c,